examples/errors/invalid_cast_bool_to_int/main.hd
fn main(): int {
    let b: bool = true;
    let i = b as int;
    return 0;
}
